Continue renaming inside files to VASCA

--- a/vasca/examples/test_GALEXField.ipynb
+++ b/vasca/examples/test_GALEXField.ipynb
@@ -49,8 +49,8 @@
     "import numpy as np\n",
     "from loguru import logger\n",
     "\n",
-    "from uvva.field import BaseField, GALEXField\n",
-    "from uvva.utils import extr_value"
+    "from vasca.field import BaseField, GALEXField\n",
+    "from vasca.utils import extr_value"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "    print(\"[Loguru]: Default handler already removed.\")\n",
     "\n",
     "# setup custom handler to make use of\n",
-    "# additional fields defined by uvva\n",
+    "# additional fields defined by vasca\n",
     "fmt = (\n",
     "    \"<g>{time:YYYY-MM-DD HH:mm:ss.SSS}</> | \"\n",
     "    \"<lvl>{level: ^8}</> | \"\n",
@@ -75,8 +75,8 @@
     "    \"<lvl>{message}</>\"\n",
     ")\n",
     "logger.add(sys.stdout, format=fmt, backtrace=False, level=\"INFO\")\n",
-    "# activate logging (is deactivated by import of uvva)\n",
-    "logger.enable(\"uvva\")"
+    "# activate logging (is deactivated by import of vasca)\n",
+    "logger.enable(\"vasca\")"
    ]
   },
   {
@@ -89,35 +89,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-12 16:47:06.601 |   INFO   | uvva.field:384 in GALEXField:add_table | Adding table 'base_field:tt_field'\n",
-      "2022-04-12 16:47:06.675 |   INFO   | uvva.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_visits'\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277101154304/PS_GROTH_MOS06_0001-xd-mcat.fits.gz with expected size 8534368. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277134708736/PS_GROTH_MOS06_0002-xd-mcat.fits.gz with expected size 8033102. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277168263168/PS_GROTH_MOS06_0003-xd-mcat.fits.gz with expected size 8029904. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277201817600/PS_GROTH_MOS06_0004-xd-mcat.fits.gz with expected size 7833596. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277235372032/PS_GROTH_MOS06_0005-xd-mcat.fits.gz with expected size 5848609. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277268926464/PS_GROTH_MOS06_0006-xd-mcat.fits.gz with expected size 5666215. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277302480896/PS_GROTH_MOS06_0007-xd-mcat.fits.gz with expected size 5142188. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277336035328/PS_GROTH_MOS06_0008-xd-mcat.fits.gz with expected size 4954939. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277369589760/PS_GROTH_MOS06_0009-xd-mcat.fits.gz with expected size 6074492. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277403144192/PS_GROTH_MOS06_0010-xd-mcat.fits.gz with expected size 5378725. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277436698624/PS_GROTH_MOS06_0011-xd-mcat.fits.gz with expected size 5426135. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277470253056/PS_GROTH_MOS06_0012-xd-mcat.fits.gz with expected size 5648342. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277537361920/PS_GROTH_MOS06_0014-xd-mcat.fits.gz with expected size 5194837. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277570916352/PS_GROTH_MOS06_0015-xd-mcat.fits.gz with expected size 5170510. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277604470784/PS_GROTH_MOS06_0016-xd-mcat.fits.gz with expected size 5333831. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277638025216/PS_GROTH_MOS06_0017-xd-mcat.fits.gz with expected size 4149636. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277772242944/PS_GROTH_MOS06_0021-xd-mcat.fits.gz with expected size 5810175. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277805797376/PS_GROTH_MOS06_0022-xd-mcat.fits.gz with expected size 6019791. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-xd-mcat.fits.gz with expected size 16382278. [astroquery.query]\n",
-      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-nd-int.fits.gz with expected size 21998279. [astroquery.query]\n"
+      "2022-04-12 16:47:06.601 |   INFO   | vasca.field:384 in GALEXField:add_table | Adding table 'base_field:tt_field'\n",
+      "2022-04-12 16:47:06.675 |   INFO   | vasca.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_visits'\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277101154304/PS_GROTH_MOS06_0001-xd-mcat.fits.gz with expected size 8534368. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277134708736/PS_GROTH_MOS06_0002-xd-mcat.fits.gz with expected size 8033102. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277168263168/PS_GROTH_MOS06_0003-xd-mcat.fits.gz with expected size 8029904. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277201817600/PS_GROTH_MOS06_0004-xd-mcat.fits.gz with expected size 7833596. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277235372032/PS_GROTH_MOS06_0005-xd-mcat.fits.gz with expected size 5848609. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277268926464/PS_GROTH_MOS06_0006-xd-mcat.fits.gz with expected size 5666215. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277302480896/PS_GROTH_MOS06_0007-xd-mcat.fits.gz with expected size 5142188. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277336035328/PS_GROTH_MOS06_0008-xd-mcat.fits.gz with expected size 4954939. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277369589760/PS_GROTH_MOS06_0009-xd-mcat.fits.gz with expected size 6074492. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277403144192/PS_GROTH_MOS06_0010-xd-mcat.fits.gz with expected size 5378725. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277436698624/PS_GROTH_MOS06_0011-xd-mcat.fits.gz with expected size 5426135. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277470253056/PS_GROTH_MOS06_0012-xd-mcat.fits.gz with expected size 5648342. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277537361920/PS_GROTH_MOS06_0014-xd-mcat.fits.gz with expected size 5194837. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277570916352/PS_GROTH_MOS06_0015-xd-mcat.fits.gz with expected size 5170510. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277604470784/PS_GROTH_MOS06_0016-xd-mcat.fits.gz with expected size 5333831. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277638025216/PS_GROTH_MOS06_0017-xd-mcat.fits.gz with expected size 4149636. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277772242944/PS_GROTH_MOS06_0021-xd-mcat.fits.gz with expected size 5810175. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375277805797376/PS_GROTH_MOS06_0022-xd-mcat.fits.gz with expected size 6019791. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-xd-mcat.fits.gz with expected size 16382278. [astroquery.query]\n",
+      "INFO: Found cached file /Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/vascarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-nd-int.fits.gz with expected size 21998279. [astroquery.query]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/uc_uvva/uvva/field.py:1301: TableReplaceWarning: replaced column 'Local Path'\n",
+      "/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/uc_vasca/uvva/field.py:1301: TableReplaceWarning: replaced column 'Local Path'\n",
       "  tt_down[\"Local Path\"] = [\n"
      ]
     },
@@ -125,11 +125,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-12 16:47:40.895 |   INFO   | uvva.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_detections'\n",
-      "2022-04-12 16:47:40.935 |   INFO   | uvva.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_ref_sources'\n",
-      "2022-04-12 16:47:40.944 |   INFO   | uvva.field:364 in GALEXField:load_sky_map | Loading skypmap from file: '/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-nd-int.fits.gz'\n",
-      "2022-04-12 16:47:41.535 |   INFO   | uvva.field:1053 in GALEXField:from_archive | Loaded new GALEX field '2607375414741434368' with filter 'NUV' from MAST data.\n",
-      "2022-04-12 16:47:41.553 |   INFO   | uvva.field:708 in GALEXField:write_to_fits | Writing file with name '/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/UVVA_GALEX_2607375414741434368_NUV_field_data.fits'\n"
+      "2022-04-12 16:47:40.895 |   INFO   | vasca.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_detections'\n",
+      "2022-04-12 16:47:40.935 |   INFO   | vasca.field:384 in GALEXField:add_table | Adding table 'galex_field:tt_ref_sources'\n",
+      "2022-04-12 16:47:40.944 |   INFO   | vasca.field:364 in GALEXField:load_sky_map | Loading skypmap from file: '/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/mastDownload/GALEX/2607375414741434368/PS_GROTH_MOS06-nd-int.fits.gz'\n",
+      "2022-04-12 16:47:41.535 |   INFO   | vasca.field:1053 in GALEXField:from_archive | Loaded new GALEX field '2607375414741434368' with filter 'NUV' from MAST data.\n",
+      "2022-04-12 16:47:41.553 |   INFO   | vasca.field:708 in GALEXField:write_to_fits | Writing file with name '/Users/julianschliwinski/Library/Mobile Documents/com~apple~CloudDocs/PhD/ULTRASAT/Science/cloud/uc_science/uvvarcat/GALEX_fields/2607375414741434368/VASCA_GALEX_2607375414741434368_NUV_field_data.fits'\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     "\n",
     "if from_archive:\n",
     "    gf = GALEXField.from_archive(obs_id=field_id, filter=\"NUV\", refresh=False)\n",
-    "    fits_path = f\"{gf.data_path}/{gf.uvva_file_prefix}_field_data.fits\"\n",
+    "    fits_path = f\"{gf.data_path}/{gf.vasca_file_prefix}_field_data.fits\"\n",
     "    gf.write_to_fits(fits_path)\n",
     "elif from_fits:\n",
     "    gf = GALEXField.from_fits(obs_id=field_id, filter=\"NUV\")\n"
@@ -185,11 +185,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-12 16:53:34.146 |   INFO   | uvva.field:423 in GALEXField:cluster_meanshift | Clustering sources\n",
-      "2022-04-12 16:53:34.228 |   INFO   | uvva.field:431 in GALEXField:cluster_meanshift | MeanShift with bandwidth '0.001388888888888889'\n",
+      "2022-04-12 16:53:34.146 |   INFO   | vasca.field:423 in GALEXField:cluster_meanshift | Clustering sources\n",
+      "2022-04-12 16:53:34.228 |   INFO   | vasca.field:431 in GALEXField:cluster_meanshift | MeanShift with bandwidth '0.001388888888888889'\n",
       "42244 42246 42246 42244 42246\n",
-      "2022-04-12 16:55:38.147 |   INFO   | uvva.field:384 in GALEXField:add_table | Adding table 'base_field:tt_sources'\n",
-      "2022-04-12 16:55:38.149 | WARNING  | uvva.field:389 in GALEXField:add_table | Table 'tt_sources' already exists, overwriting\n"
+      "2022-04-12 16:55:38.147 |   INFO   | vasca.field:384 in GALEXField:add_table | Adding table 'base_field:tt_sources'\n",
+      "2022-04-12 16:55:38.149 | WARNING  | vasca.field:389 in GALEXField:add_table | Table 'tt_sources' already exists, overwriting\n"
      ]
     }
    ],
@@ -804,9 +804,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc_uvva_venv399",
+   "display_name": "uc_vasca_venv399",
    "language": "python",
-   "name": "uc_uvva_venv399"
+   "name": "uc_vasca_venv399"
   },
   "language_info": {
    "codemirror_mode": {
