--- a/vasca/examples/test_clustering.ipynb
+++ b/vasca/examples/test_clustering.ipynb
@@ -47,8 +47,8 @@
     "from sklearn.neighbors import kneighbors_graph\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "from uvva.field import Field\n",
-    "from uvva.utils import extr_value"
+    "from vasca.field import Field\n",
+    "from vasca.utils import extr_value"
    ]
   },
   {
@@ -1497,9 +1497,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc_uvva",
+   "display_name": "uc_vasca",
    "language": "python",
-   "name": "uc_uvva"
+   "name": "uc_vasca"
   },
   "language_info": {
    "codemirror_mode": {
