--- a/vasca/examples/vasca_pipe_example.ipynb
+++ b/vasca/examples/vasca_pipe_example.ipynb
@@ -5,7 +5,7 @@
    "id": "2ccb25d6-4601-4d17-97c5-6e7cb399dbfb",
    "metadata": {},
    "source": [
-    "Example notebook to have a look at the results of the 'vasca_pipe -cfg uvva_pipe_example_cfg.yaml' results.\n",
+    "Example notebook to have a look at the results of the 'vasca_pipe -cfg vasca_pipe_example_cfg.yaml' results.\n",
     "The output of the pipline was stored in the folder vasca_pipe_example."
    ]
   },
