Renamed src_id to fd_src_id everywhere

--- a/vasca/examples/debug_clustering.ipynb
+++ b/vasca/examples/debug_clustering.ipynb
@@ -274,7 +274,7 @@
       "text/html": [
        "<div><i>Table length=6386</i>\n",
        "<table id=\"table5067219056\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>flag</th><th>sel</th></tr></thead>\n",
+       "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>flag</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>uint32</th><th>float32</th><th>float32</th><th>uint32</th><th>int32</th><th>uint8</th></tr></thead>\n",
        "<tr><td>2</td><td>198.43707</td><td>-23.044176</td><td>3</td><td>0</td><td>1</td></tr>\n",
@@ -286,7 +286,7 @@
       ],
       "text/plain": [
        "<Table length=6386>\n",
-       "src_id     ra       dec     nr_det  flag  sel \n",
+       "fd_src_id     ra       dec     nr_det  flag  sel \n",
        "          deg       deg                       \n",
        "uint32  float32   float32   uint32 int32 uint8\n",
        "------ --------- ---------- ------ ----- -----\n",
@@ -317,7 +317,7 @@
       "text/html": [
        "<div><i>Table length=7396</i>\n",
        "<table id=\"table5066452656\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>vis_id</th><th>src_id</th><th>det_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th><th>sel</th></tr></thead>\n",
+       "<thead><tr><th>vis_id</th><th>fd_src_id</th><th>det_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>uint64</th><th>int64</th><th>uint64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>float32</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>uint8</th></tr></thead>\n",
        "<tr><td>6388191157628698624</td><td>507</td><td>6388191157629747201</td><td>197.82335469959443</td><td>-23.589975434093283</td><td>0.00013316271360963583</td><td>14.848554</td><td>0.013272484</td><td>0.5788923</td><td>0</td><td>0.7838721</td><td>0</td><td>75.86798858642578</td><td>1.2661969661712646</td><td>41.49015426635742</td><td>1.0061039924621582</td><td>0.12803974747657776</td><td>1</td></tr>\n",
@@ -329,7 +329,7 @@
       ],
       "text/plain": [
        "<Table length=7396>\n",
-       "       vis_id       src_id        det_id               ra                 dec         ...       flux_f38          flux_f38_err            E_bv         sel \n",
+       "       vis_id       fd_src_id        det_id               ra                 dec         ...       flux_f38          flux_f38_err            E_bv         sel \n",
        "                                                      deg                 deg         ...                                                                  \n",
        "       uint64       int64         uint64            float64             float64       ...       float64             float64             float64       uint8\n",
        "------------------- ------ ------------------- ------------------ ------------------- ... ------------------- ------------------- ------------------- -----\n",
@@ -358,14 +358,14 @@
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;src_id&apos; dtype=&apos;uint32&apos; unit=&apos;&apos; description=&apos;Source ID nr.&apos; length=2&gt;\n",
+       "&lt;Column name=&apos;fd_src_id&apos; dtype=&apos;uint32&apos; unit=&apos;&apos; description=&apos;Source ID nr.&apos; length=2&gt;\n",
        "<table>\n",
        "<tr><td>1</td></tr>\n",
        "<tr><td>2</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Column name='src_id' dtype='uint32' unit='' description='Source ID nr.' length=2>\n",
+       "<Column name='fd_src_id' dtype='uint32' unit='' description='Source ID nr.' length=2>\n",
        "1\n",
        "2"
       ]
@@ -376,7 +376,7 @@
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;src_id&apos; dtype=&apos;int64&apos; length=6386&gt;\n",
+       "&lt;Column name=&apos;fd_src_id&apos; dtype=&apos;int64&apos; length=6386&gt;\n",
        "<table>\n",
        "<tr><td>0</td></tr>\n",
        "<tr><td>1</td></tr>\n",
@@ -391,7 +391,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Column name='src_id' dtype='int64' length=6386>\n",
+       "<Column name='fd_src_id' dtype='int64' length=6386>\n",
        "   0\n",
        "   1\n",
        "   2\n",
@@ -414,15 +414,15 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m display(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_sources[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msrc_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m      2\u001b[0m display(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_detections[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msrc_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_detections[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msrc_id\u001b[39m\u001b[38;5;124m\"\u001b[39m])) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_sources[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msrc_id\u001b[39m\u001b[38;5;124m\"\u001b[39m])), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInoncsitent data.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m display(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_sources[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfd_src_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m      2\u001b[0m display(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_detections[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfd_src_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_detections[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfd_src_id\u001b[39m\u001b[38;5;124m\"\u001b[39m])) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(np\u001b[38;5;241m.\u001b[39munique(gf\u001b[38;5;241m.\u001b[39mtt_sources[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfd_src_id\u001b[39m\u001b[38;5;124m\"\u001b[39m])), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInoncsitent data.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[0;31mAssertionError\u001b[0m: Inoncsitent data."
      ]
     }
    ],
    "source": [
-    "display(np.unique(gf.tt_sources[\"src_id\"]))\n",
-    "display(np.unique(gf.tt_detections[\"src_id\"]))\n",
-    "assert len(np.unique(gf.tt_detections[\"src_id\"])) == len(np.unique(gf.tt_sources[\"src_id\"])), \"Inoncsitent data.\""
+    "display(np.unique(gf.tt_sources[\"fd_src_id\"]))\n",
+    "display(np.unique(gf.tt_detections[\"fd_src_id\"]))\n",
+    "assert len(np.unique(gf.tt_detections[\"fd_src_id\"])) == len(np.unique(gf.tt_sources[\"fd_src_id\"])), \"Inoncsitent data.\""
    ]
   },
   {
@@ -482,7 +482,7 @@
       "text/html": [
        "<div><i>Table length=6386</i>\n",
        "<table id=\"table4727483264\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>flag</th><th>sel</th></tr></thead>\n",
+       "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>flag</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>uint32</th><th>float32</th><th>float32</th><th>uint32</th><th>int32</th><th>uint8</th></tr></thead>\n",
        "<tr><td>0</td><td>198.45877</td><td>-23.006039</td><td>2</td><td>0</td><td>1</td></tr>\n",
@@ -494,7 +494,7 @@
       ],
       "text/plain": [
        "<Table length=6386>\n",
-       "src_id     ra       dec     nr_det  flag  sel \n",
+       "fd_src_id     ra       dec     nr_det  flag  sel \n",
        "          deg       deg                       \n",
        "uint32  float32   float32   uint32 int32 uint8\n",
        "------ --------- ---------- ------ ----- -----\n",
@@ -525,7 +525,7 @@
       "text/html": [
        "<div><i>Table length=7396</i>\n",
        "<table id=\"table5066452656\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>vis_id</th><th>src_id</th><th>det_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th><th>sel</th></tr></thead>\n",
+       "<thead><tr><th>vis_id</th><th>fd_src_id</th><th>det_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>uint64</th><th>int64</th><th>uint64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>float32</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>uint8</th></tr></thead>\n",
        "<tr><td>6388191157628698624</td><td>496</td><td>6388191157629747201</td><td>197.82335469959443</td><td>-23.589975434093283</td><td>0.00013316271360963583</td><td>14.848554</td><td>0.013272484</td><td>0.5788923</td><td>0</td><td>0.7838721</td><td>0</td><td>75.86798858642578</td><td>1.2661969661712646</td><td>41.49015426635742</td><td>1.0061039924621582</td><td>0.12803974747657776</td><td>1</td></tr>\n",
@@ -537,7 +537,7 @@
       ],
       "text/plain": [
        "<Table length=7396>\n",
-       "       vis_id       src_id        det_id               ra                 dec         ...       flux_f38          flux_f38_err            E_bv         sel \n",
+       "       vis_id       fd_src_id        det_id               ra                 dec         ...       flux_f38          flux_f38_err            E_bv         sel \n",
        "                                                      deg                 deg         ...                                                                  \n",
        "       uint64       int64         uint64            float64             float64       ...       float64             float64             float64       uint8\n",
        "------------------- ------ ------------------- ------------------ ------------------- ... ------------------- ------------------- ------------------- -----\n",
@@ -566,7 +566,7 @@
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;src_id&apos; dtype=&apos;uint32&apos; unit=&apos;&apos; description=&apos;Source ID nr.&apos; length=6386&gt;\n",
+       "&lt;Column name=&apos;fd_src_id&apos; dtype=&apos;uint32&apos; unit=&apos;&apos; description=&apos;Source ID nr.&apos; length=6386&gt;\n",
        "<table>\n",
        "<tr><td>0</td></tr>\n",
        "<tr><td>1</td></tr>\n",
@@ -581,7 +581,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Column name='src_id' dtype='uint32' unit='' description='Source ID nr.' length=6386>\n",
+       "<Column name='fd_src_id' dtype='uint32' unit='' description='Source ID nr.' length=6386>\n",
        "   0\n",
        "   1\n",
        "   2\n",
@@ -600,7 +600,7 @@
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;src_id&apos; dtype=&apos;int64&apos; length=6386&gt;\n",
+       "&lt;Column name=&apos;fd_src_id&apos; dtype=&apos;int64&apos; length=6386&gt;\n",
        "<table>\n",
        "<tr><td>0</td></tr>\n",
        "<tr><td>1</td></tr>\n",
@@ -615,7 +615,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Column name='src_id' dtype='int64' length=6386>\n",
+       "<Column name='fd_src_id' dtype='int64' length=6386>\n",
        "   0\n",
        "   1\n",
        "   2\n",
@@ -633,9 +633,9 @@
     }
    ],
    "source": [
-    "display(np.unique(gf.tt_sources[\"src_id\"]))\n",
-    "display(np.unique(gf.tt_detections[\"src_id\"]))\n",
-    "assert len(np.unique(gf.tt_detections[\"src_id\"])) == len(np.unique(gf.tt_sources[\"src_id\"])), \"Inoncsitent data.\""
+    "display(np.unique(gf.tt_sources[\"fd_src_id\"]))\n",
+    "display(np.unique(gf.tt_detections[\"fd_src_id\"]))\n",
+    "assert len(np.unique(gf.tt_detections[\"fd_src_id\"])) == len(np.unique(gf.tt_sources[\"fd_src_id\"])), \"Inoncsitent data.\""
    ]
   },
   {
@@ -1074,9 +1074,9 @@
     }
    ],
    "source": [
-    "src_ids, det_cts = np.unique(ms.labels_, return_counts=True)\n",
+    "fd_src_ids, det_cts = np.unique(ms.labels_, return_counts=True)\n",
     "# cluster indeces with n_sources > n_visits\n",
-    "cidxs = src_ids[det_cts>gf.n_visits]\n",
+    "cidxs = fd_src_ids[det_cts>gf.n_visits]\n",
     "print(\"Number of visits: \", gf.n_visits)\n",
     "print(\"Number of sources:\", det_cts[det_cts>5])\n",
     "print(\"Cluster index:    \", cidxs)\n",
