--- a/vasca/examples/vasca_pipe_example.ipynb
+++ b/vasca/examples/vasca_pipe_example.ipynb
@@ -183,7 +183,7 @@
       "text/html": [
        "<i>Table length=4</i>\n",
        "<table id=\"table140224358626976-282682\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_var</th><th>mag_rchiq</th><th>mag_dmax</th><th>mag_dmax_sig</th><th>ul_weight</th><th>sel</th><th>field_id</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_var</th><th>mag_rchiq</th><th>mag_dmax</th><th>mag_dmax_sig</th><th>ul_weight</th><th>sel</th><th>field_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>13</td><td>150.5052288307789</td><td>3.376008159991874</td><td>27</td><td>2</td><td>19.108290707623517</td><td>0.0017808899615867485</td><td>3.218736938123674</td><td>0.11990066810890454</td><td>4.312380877406151</td><td>0.0</td><td>True</td><td>2604912508670050304</td></tr>\n",
        "<tr><td>1</td><td>19</td><td>150.85211129228375</td><td>3.344284140463829</td><td>26</td><td>3</td><td>20.082601987398586</td><td>0.0035474839293175475</td><td>1.948684796827247</td><td>0.1702980628380395</td><td>5.214141079370534</td><td>0.0</td><td>True</td><td>2604912508670050304</td></tr>\n",
@@ -278,11 +278,11 @@
    ],
    "source": [
     "#Plot light curves for some selected sources\n",
-    "src_ids = rg.tt_sources[sel][\"src_id\"][0:14]\n",
+    "fd_src_ids = rg.tt_sources[sel][\"fd_src_id\"][0:14]\n",
     "field_ids = rg.tt_sources[sel][\"field_id\"][0:14]\n",
-    "lcs = rg.get_light_curve(src_ids, field_ids)\n",
+    "lcs = rg.get_light_curve(fd_src_ids, field_ids)\n",
     "fig_lc = plt.figure(figsize=(10, 10))\n",
-    "rg.plot_light_curve(src_ids, field_ids)\n",
+    "rg.plot_light_curve(fd_src_ids, field_ids)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -380,7 +380,7 @@
    ],
    "source": [
     "#Get and show first lightcurve in BinnedTimeSeries format\n",
-    "lc_01 = rg.get_light_curve(src_ids[0], field_ids[0])\n",
+    "lc_01 = rg.get_light_curve(fd_src_ids[0], field_ids[0])\n",
     "lc_01.show_in_notebook()"
    ]
   },
@@ -395,7 +395,7 @@
       "text/html": [
        "<i>Table length=2</i>\n",
        "<table id=\"table140224358616608-906611\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>src_id</th><th>mag</th><th>mag_err</th><th>ul</th><th>field_id</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>fd_src_id</th><th>mag</th><th>mag_err</th><th>ul</th><th>field_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>13</td><td>[19.067778 19.132465 19.08327  19.156546 19.106747 19.140545 19.118649\n",
        " 19.127035 19.069965 19.072947 19.05392  19.120884 19.143364 19.228191\n",
